welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:14: error: not enough arguments for method marqueSol: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	marqueSol()
                 ^